Fixing spacing

--- a/style.css
+++ b/style.css
@@ -88,5 +88,5 @@ img {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1em;
+    padding: 0.25em;
 }
